--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://github.com/SachinGanesh/screenshot
 
 environment:
   sdk: '>=2.12.0 <4.0.0'
-  flutter: '>=2.19.0 <3.0.0'
+  flutter: '>=3.19.0'
 
 # analyzer:
 #   enable-experiment:
